WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162779
Fix fast/text/trak-optimizeLegibility.html
https://bugs.webkit.org/show_bug.cgi?id=162779
Summary
Fix fast/text/trak-optimizeLegibility.html
Myles C. Maxfield
Reported
2016-09-30 03:11:43 PDT
Fix fast/text/trak-optimizeLegibility.html
Attachments
Patch
(6.99 KB, patch)
2016-09-30 03:13 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews106 for mac-yosemite-wk2
(1.18 MB, application/zip)
2016-09-30 04:53 PDT
,
Build Bot
no flags
Details
Patch
(7.19 KB, patch)
2016-09-30 13:05 PDT
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-09-30 03:13:57 PDT
Created
attachment 290314
[details]
Patch
Build Bot
Comment 2
2016-09-30 04:53:11 PDT
Comment on
attachment 290314
[details]
Patch
Attachment 290314
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2174607
New failing tests: fast/images/pixel-crack-image-background-webkit-transform-scale.html
Build Bot
Comment 3
2016-09-30 04:53:14 PDT
Created
attachment 290327
[details]
Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Simon Fraser (smfr)
Comment 4
2016-09-30 12:59:29 PDT
Comment on
attachment 290314
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=290314&action=review
> Source/WebCore/ChangeLog:8 > + Somehow this test got rebaselined to allow an unnecessary delta
"Somehow" is a bit vague given that we can consult SVN.
> Source/WebCore/platform/graphics/cocoa/FontCacheCoreText.cpp:667 > + if ((!family.length() || family[0] != '.') && whitelist.size() && !whitelist.contains(family))
I would prefer family[0] != '.' to be wrapped in a small function called isSystemFont() or something. Do we do this check anywhere else?
Myles C. Maxfield
Comment 5
2016-09-30 13:05:18 PDT
Created
attachment 290371
[details]
Patch
Myles C. Maxfield
Comment 6
2016-09-30 14:20:12 PDT
Committed
r206666
: <
http://trac.webkit.org/changeset/206666
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug