Fix fast/text/trak-optimizeLegibility.html https://bugs.webkit.org/show_bug.cgi?id=162779

Reviewed by Simon Fraser.

Source/WebCore:

I accidentally created this test to allow an unnecessary delta
in the width comparison. This covered the fact that the fonts
were not being selected correctly in our testing code. Update the
font selection code to work with system fonts correctly and
update the test to not use a delta when performing width
comparisons.

Test: fast/text/trak-optimizeLegibility.html

* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::isSystemFont):
(WebCore::platformFontLookupWithFamily):

LayoutTests:

* fast/text/trak-optimizeLegibility.html:
* platform/ios-simulator/fast/text/trak-optimizeLegibility-expected.txt:
* platform/mac-elcapitan/fast/text/trak-optimizeLegibility-expected.txt: Removed.
* platform/mac/fast/text/trak-optimizeLegibility-expected.txt:

Canonical link: https://commits.webkit.org/180744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206666 268f45cc-cd09-0410-ab3c-d52691b4dbfc